Wall tiles stored as array
The Wall's list of tiles is now stored as an array instead of a
TileList. Wall size is constant, so this make sense and should make some
GUI things easier. Also modified RoundTracker, TableViewer, and GenSort
to work with arrays.